--- a/src/main/resources/app.fxml
+++ b/src/main/resources/app.fxml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="230.0" prefWidth="475.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bwg.Controller">
+<AnchorPane prefHeight="230.0" prefWidth="475.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bwg.Controller">
     <children>
         <ToggleButton fx:id="exit" layoutX="421.0" mnemonicParsing="false" onAction="#onExit" prefHeight="25.0" prefWidth="32.0" styleClass="gui-exit-button" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0" />
         <ToggleButton layoutX="389.0" mnemonicParsing="false" onAction="#onMin" prefHeight="24.0" prefWidth="32.0" styleClass="gui-min-button" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0" />
-      <Label layoutX="391.0" layoutY="220.0" text="telegram: @birewallg" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="2.0">
-         <font>
-            <Font size="8.0" />
-         </font>
-      </Label>
-      <Label layoutX="30.0" layoutY="81.0" text="Знак Боевой песьни" />
-      <Label layoutX="30.0" layoutY="136.0" text="Серебряная монета" />
-      <Label layoutX="30.0" layoutY="22.0" text="Пояс повелителей миража" />
-      <TextField layoutX="30.0" layoutY="102.0" prefHeight="25.0" prefWidth="61.0" text="0" />
-      <TextField layoutX="30.0" layoutY="157.0" prefHeight="25.0" prefWidth="61.0" text="0" />
-      <TextField layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="61.0" text="0" />
-      <Separator layoutX="236.0" layoutY="4.0" orientation="VERTICAL" prefHeight="232.0" prefWidth="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Label layoutX="254.0" layoutY="43.0" prefHeight="17.0" prefWidth="191.0" text="5 * 0" />
-      <Label layoutX="254.0" layoutY="61.0" prefHeight="17.0" prefWidth="191.0" text="Расчеты" />
-      <Label layoutX="254.0" layoutY="97.0" prefHeight="17.0" prefWidth="191.0" text="648 000 + 1 296 * 0" />
-      <Label layoutX="254.0" layoutY="154.0" prefHeight="17.0" prefWidth="191.0" text="108 000 + 108 * 0" />
-      <Label layoutX="254.0" layoutY="117.0" prefHeight="17.0" prefWidth="191.0" text="Расчеты" />
-      <Label layoutX="254.0" layoutY="171.0" prefHeight="17.0" prefWidth="191.0" text="Расчеты" />
-      <Button layoutX="77.0" layoutY="197.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="pwcats.info" />
+        <Label layoutX="391.0" layoutY="220.0" text="telegram: @birewallg" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="2.0">
+            <font>
+                <Font size="8.0" />
+            </font>
+        </Label>
+        <Label layoutX="30.0" layoutY="81.0" text="Знак Боевой песни" />
+        <Label layoutX="30.0" layoutY="136.0" text="Серебряная монета" />
+        <Label layoutX="30.0" layoutY="22.0" text="Пояс повелителей миража" />
+
+        <TextField fx:id="ppmViewTextField" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="88.0" text="0" />
+        <TextField fx:id="zbpViewTextField" layoutX="30.0" layoutY="102.0" prefHeight="25.0" prefWidth="88.0" text="0" />
+        <TextField fx:id="smViewTextField" layoutX="30.0" layoutY="157.0" prefHeight="25.0" prefWidth="88.0" text="0" />
+
+        <Separator layoutX="236.0" layoutY="4.0" orientation="VERTICAL" prefHeight="232.0" prefWidth="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
+
+        <Label fx:id="ppmViewLabel" layoutX="254.0" layoutY="34.0" prefHeight="17.0" prefWidth="191.0" text="5 * 0" />
+        <Label fx:id="ppmCalcOutLabel" layoutX="254.0" layoutY="52.0" prefHeight="17.0" prefWidth="191.0" text="0" />
+        <Label fx:id="zbpViewLabel" layoutX="254.0" layoutY="88.0" prefHeight="17.0" prefWidth="191.0" text="-648 000 + 1 296 * 0" />
+        <Label fx:id="zbpCalcOutLabel" layoutX="254.0" layoutY="108.0" prefHeight="17.0" prefWidth="191.0" text="0" />
+        <Label fx:id="smViewLabel" layoutX="254.0" layoutY="145.0" prefHeight="17.0" prefWidth="191.0" text="-108 000 + 108 * 0" />
+        <Label fx:id="smCalcOutLabel" layoutX="254.0" layoutY="162.0" prefHeight="17.0" prefWidth="191.0" text="0" />
+
+        <Button fx:id="actionPWCATSButton" layoutX="77.0" layoutY="197.0" mnemonicParsing="false" onAction="#actionPWCATSGetInfo" prefHeight="25.0" prefWidth="76.0" text="pwcats.info" />
+        <Separator layoutX="29.0" layoutY="75.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Separator layoutX="30.0" layoutY="134.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Separator layoutX="30.0" layoutY="188.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Label fx:id="profitViewLabel" layoutX="254.0" layoutY="197.0" prefHeight="17.0" prefWidth="191.0" text="Profit: 0" />
     </children>
 </AnchorPane>
